--- a/index.html
+++ b/index.html
@@ -63,10 +63,53 @@
 </head>
 <body>
     <div class="markdown-body">
-        <!-- El contenido del README.md se cargará aquí -->
+        <h1>Seguro de Vida do Mercado Pago: conheça os diferenciais</h1>
+        
+        <p>Contar com soluções e vantagens que facilitam seu dia a dia é essencial para economizar tempo, dinheiro e diminuir as burocracias. Por isso, além de benefícios que ajudam você a organizar sua vida financeira, o Mercado Pago também tem a proposta de cuidar do seu bem-estar, da sua saúde e da sua tranquilidade, através do seguro de vida.</p>
+
+        <p>Agora, com sua conta digital Mercado Pago, você consegue <strong>contratar o seguro para vida de forma rápida, simples e super acessível, com mensalidades a partir de R$ 9,90, planos customizáveis e telemedicina</strong>, para você começar a cuidar da sua vida e organização financeira hoje mesmo.</p>
+
+        <h2>O que o Seguro de Vida do Mercado Pago oferece?</h2>
+
+        <p>Apesar de ser um tema delicado, falar em seguro para vida é essencial e o seguro Mercado Pago vai além, proporcionando diversas vantagens para você, a começar pela possibilidade de contratar seu seguro com coberturas básicas, que garantem indenização aos seus beneficiários em caso de morte e até mesmo o funeral.</p>
+
+        <p>Assim, você pode turbinar seu seguro com assistência funeral para cônjuge e filhos, diária por internação hospitalar, cirurgias, doenças graves e cirurgias, além de benefícios válidos para todos os planos, como descontos em farmácia e telemedicina.</p>
+
+        <p>Esse benefício de telemedicina pode ser usado logo após você contratar seu seguro, tendo acesso a atendimento 24 horas e em diversas especialidades médicas, como cardiologia, ginecologia, urologia, entre outros.</p>
+
+        <h2>Contrate seu Seguro para Vida do Mercado Pago em 6 passos!</h2>
+
+        <p>Em qualquer lugar que você esteja é possível contratar o seguro de vida Mercado Pago, basta acessar sua conta pelo aplicativo no celular e fazer a contratação, que é simples, fácil e segura.</p>
+
+        <ol>
+            <li>Acesse sua Conta Mercado Pago pelo app;</li>
+            <li>Vá até o menu de serviços ou clique na opção "Ver Mais";</li>
+            <li>Selecione a opção "Seguros" e, em seguida, clique em "Vida";</li>
+            <li>Faça a simulação com os valores de cobertura desejados;</li>
+            <li>Certifique-se de também simular os serviços adicionais;</li>
+            <li>Escolha o método de pagamento desejado;</li>
+        </ol>
+
+        <h2>5 motivos para você contratar seu seguro</h2>
+
+        <h3>1. Custo-benefício</h3>
+        <p>Você conta com muitas vantagens, como a telemedicina, assistências e auxílios por um baixo custo. Além disso, se livra de uma surpresa negativa em ter que arcar com todas as despesas de uma só vez em casos delicados.</p>
+
+        <h3>2. Fácil contratação</h3>
+        <p>Você não precisa sair de casa para contratar o seguro de vida do Mercado Pago, pode fazer pelo celular e sem a necessidade da apresentação burocrática de vários documentos.</p>
+
+        <h3>3. Diferentes tipos de coberturas</h3>
+        <p>Coberturas para morte, assistência funeral, assistência funeral familiar, diária por internação hospitalar por acidente, doenças graves e cirurgias, e telemedicina, são as coberturas que o seguro de vida Mercado Pago proporciona.</p>
+
+        <h3>4. Indenização recebida na hora</h3>
+        <p>Indenização imediata e sem dores de cabeça, diferentemente de outras instituições, que podem te ressarcir somente em 30 dias do envio da documentação.</p>
+
+        <h3>5. Proteção para família</h3>
+        <p>A segurança e proteção que sua família precisa para não passar dificuldades ou problemas financeiros em caso grave. Imagine sua família ter que lidar com processos burocráticos ou passar necessidades em um momento difícil? Isso não pode acontecer!</p>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script>
+        // Mantenemos el script para actualizar el contenido si es necesario
         fetch('README.md')
             .then(response => response.text())
             .then(text => {
@@ -75,4 +118,4 @@
             .catch(error => console.error('Error loading README.md:', error));
     </script>
 </body>
-</html> 
+</html>
