--- a/index.html
+++ b/index.html
@@ -63,23 +63,37 @@
 </head>
 <body>
     <div class="markdown-body">
-        <h1>Seguro de Vida do Mercado Pago: conheça os diferenciais</h1>
+        <h1><strong>Seguro de Vida do Mercado Pago: conheça os diferenciais</strong></h1>
         
-        <p>Contar com soluções e vantagens que facilitam seu dia a dia é essencial para economizar tempo, dinheiro e diminuir as burocracias. Por isso, além de benefícios que ajudam você a organizar sua vida financeira, o Mercado Pago também tem a proposta de cuidar do seu bem-estar, da sua saúde e da sua tranquilidade, através do seguro de vida.</p>
+        <p><a href="https://meubolso.mercadopago.com.br/author/equipe-mercado-pago">Equipe Mercado Pago</a><br>
+        07/02/2023<br>
+        4 min de leituraAtualizado em 06/07/2023</p>
+        
+        <img src="media/familia-protegida.jpg" alt="Família protegida com o Seguro de Vida do Mercado Pago">
+
+        <p>Contar com soluções e vantagens que facilitam seu dia a dia é essencial para economizar tempo, dinheiro e diminuir as burocracias. Por isso, além de benefícios que ajudam você a organizar sua <a href="https://meubolso.mercadopago.com.br/habitos-que-prejudicam-sua-vida-financeira">vida financeira</a>, o Mercado Pago também tem a proposta de cuidar do seu bem-estar, da sua saúde e da sua tranquilidade, através do <a href="https://meubolso.mercadopago.com.br/vantagens-em-ter-seguro-de-vida-e-acidentes-pessoais">seguro de vida</a>.</p>
 
         <p>Agora, com sua conta digital Mercado Pago, você consegue <strong>contratar o seguro para vida de forma rápida, simples e super acessível, com mensalidades a partir de R$ 9,90, planos customizáveis e telemedicina</strong>, para você começar a cuidar da sua vida e organização financeira hoje mesmo.</p>
 
-        <h2>O que o Seguro de Vida do Mercado Pago oferece?</h2>
+        <h2><strong>O que o Seguro de Vida do Mercado Pago oferece?</strong></h2>
 
-        <p>Apesar de ser um tema delicado, falar em seguro para vida é essencial e o seguro Mercado Pago vai além, proporcionando diversas vantagens para você, a começar pela possibilidade de contratar seu seguro com coberturas básicas, que garantem indenização aos seus beneficiários em caso de morte e até mesmo o funeral.</p>
+        <p>Apesar de ser um tema delicado, falar em seguro para vida é essencial e o <a href="https://meubolso.mercadopago.com.br/seguros-mercado-pago">seguro Mercado Pago</a> vai além, proporcionando diversas vantagens para você, a começar pela possibilidade de contratar seu seguro com coberturas básicas, que garantem indenização aos seus beneficiários em caso de morte e até mesmo o funeral.</p>
 
-        <p>Assim, você pode turbinar seu seguro com assistência funeral para cônjuge e filhos, diária por internação hospitalar, cirurgias, doenças graves e cirurgias, além de benefícios válidos para todos os planos, como descontos em farmácia e telemedicina.</p>
+        <p>Assim, você pode turbinar seu <a href="https://meubolso.mercadopago.com.br/guia-pratico-sobre-seguros?hsLang=pt-br">seguro</a> com assistência funeral para cônjuge e filhos, diária por internação hospitalar, cirurgias, doenças graves e cirurgias, além de benefícios válidos para todos os planos, como descontos em farmácia e telemedicina.</p>
 
-        <p>Esse benefício de telemedicina pode ser usado logo após você contratar seu seguro, tendo acesso a atendimento 24 horas e em diversas especialidades médicas, como cardiologia, ginecologia, urologia, entre outros.</p>
+        <p>Esse benefício de <a href="https://meubolso.mercadopago.com.br/seguro-mercado-pago-telemedicina">telemedicina</a> pode ser usado logo após você contratar seu seguro, tendo acesso a atendimento 24 horas e em diversas especialidades médicas, como cardiologia, ginecologia, urologia, entre outros.</p>
 
-        <h2>Contrate seu Seguro para Vida do Mercado Pago em 6 passos!</h2>
+        <p>Ou seja, uma grande cesta de benefícios para que você possa aproveitar em vida e garantir que os seus familiares estejam seguros em casos delicados.</p>
+
+        <p><strong>👉 Leia também: <a href="https://meubolso.mercadopago.com.br/ebook-seguros?hsLang=pt-br">Seguros: a proteção necessária para você e sua família!</a></strong></p>
+
+        <h2><strong>Contrate seu Seguro para Vida do Mercado Pago em 6 passos!</strong></h2>
 
         <p>Em qualquer lugar que você esteja é possível contratar o seguro de vida Mercado Pago, basta acessar sua conta pelo aplicativo no celular e fazer a contratação, que é simples, fácil e segura.</p>
+
+        <p>Além disso, você escolhe como quer pagar, seja com cartão de crédito ou saldo da conta — <a href="https://www.mercadopago.com.br/onlinepayments/universal-link?fallback=https%3A%2F%2Fwww.mercadopago.com.br%2Fstop%2Fseguro-vida&android=mercadopago%3A%2F%2Fwebview%3Furl%3Dhttps%253A%252F%252Fwww.mercadopago.com.br%252Fc%252Fseguro-de-vida%253F%26hides_bottom_bar%3Dtrue&ios=mercadopago%3A%2F%2Fwebview%3Furl%3Dhttps%253A%252F%252Fwww.mercadopago.com.br%252Fc%252Fseguro-de-vida%253F%26hides_bottom_bar%3Dtrue">clicando aqui</a> você também tem acesso a uma oferta exclusiva para contratar ainda hoje seu seguro para vida do Mercado Pago.</p>
+
+        <p>A contratação é simples, basta você:</p>
 
         <ol>
             <li>Acesse sua Conta Mercado Pago pelo app;</li>
@@ -88,24 +102,44 @@
             <li>Faça a simulação com os valores de cobertura desejados;</li>
             <li>Certifique-se de também simular os serviços adicionais;</li>
             <li>Escolha o método de pagamento desejado;</li>
+            <li>Prontinho! Agora é só concluir para garantir o seguro para vida.</li>
         </ol>
 
-        <h2>5 motivos para você contratar seu seguro</h2>
+        <h2><strong>5 motivos para você contratar seu seguro</strong></h2>
 
-        <h3>1. Custo-benefício</h3>
+        <p>Muito mais do que garantir o bem-estar dos seus familiares em casos graves, <strong>o seguro de vida pode te proporcionar benefícios e vantagens em vida</strong>, sendo extremamente necessárias para o dia a dia, principalmente para quem está na correria.</p>
+
+        <p>Além disso, há outras vantagens em contar com o <a href="https://conteudo.mercadopago.com.br/agora-vai-seguro-de-vida-mercado-pago">seguro de vida do Mercado Pago</a>:</p>
+
+        <h3><strong>1. Custo-benefício</strong></h3>
         <p>Você conta com muitas vantagens, como a telemedicina, assistências e auxílios por um baixo custo. Além disso, se livra de uma surpresa negativa em ter que arcar com todas as despesas de uma só vez em casos delicados.</p>
 
-        <h3>2. Fácil contratação</h3>
+        <h3><strong>2. Fácil contratação</strong></h3>
         <p>Você não precisa sair de casa para contratar o seguro de vida do Mercado Pago, pode fazer pelo celular e sem a necessidade da apresentação burocrática de vários documentos.</p>
 
-        <h3>3. Diferentes tipos de coberturas</h3>
+        <h3><strong>3. Diferentes tipos de coberturas</strong></h3>
         <p>Coberturas para morte, assistência funeral, assistência funeral familiar, diária por internação hospitalar por acidente, doenças graves e cirurgias, e telemedicina, são as coberturas que o seguro de vida Mercado Pago proporciona.</p>
 
-        <h3>4. Indenização recebida na hora</h3>
+        <h3><strong>4. Indenização recebida na hora</strong></h3>
         <p>Indenização imediata e sem dores de cabeça, diferentemente de outras instituições, que podem te ressarcir somente em 30 dias do envio da documentação.</p>
 
-        <h3>5. Proteção para família</h3>
+        <h3><strong>5. Proteção para família</strong></h3>
         <p>A segurança e proteção que sua família precisa para não passar dificuldades ou problemas financeiros em caso grave. Imagine sua família ter que lidar com processos burocráticos ou passar necessidades em um momento difícil? Isso não pode acontecer!</p>
+
+        <p><strong>👉 Leia também: <a href="https://meubolso.mercadopago.com.br/conta-digital-como-funciona">Descubra como as contas digitais podem transformar a sua vida financeira sem os altos custos das contas tradicionais e burocracias</a></strong></p>
+
+        <h2><strong>A proteção que você precisa para sua vida está no Mercado Pago!</strong></h2>
+
+        <p>Seja para garantir a proteção da sua família, facilitar os trâmites em um momento complicado ou aproveitar inúmeros benefícios, <strong>o seguro para vida do Mercado Pago é a melhor opção, e tudo isso com a facilidade da contratação e pagamento, com mensalidades a partir de apenas R$ 9,90.</strong></p>
+
+        <p>Mantenha sua proteção e também da sua família, além de acessar outros benefícios extremamente úteis para usufruir em vida, podendo ser acionados diretamente da tela do seu celular, no aplicativo do Mercado Pago. É rápido, fácil e principalmente, seguro.</p>
+
+        <img src="media/mercado-pago-seguros.jpg" alt="Mercado Pago e Seguros? Agora você pode contratar alguns tipos de seguros direto da sua conta!">
+
+        <hr>
+
+        <p>Escrito por:</p>
+        <img src="media/assinatura_equipe.jpg" alt="assinatura_equipe">
     </div>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script>
